# elcalc

./: .gitignore  .stylelintrc  .travis.yml  LICENSE  README.md  _gitignore  app.js  babel.config.js  building.txt  calculator.css  index.html  main.js  package-lock.json  package.json  readme.md
.github/ISSUE_TEMPLATE/: bug_report.md
app/: app.html
crate/: Cargo.toml  license  readme.md
crate/src/: lib.rs
resources/: icon.icns
src/: app.html  app.js  background.js  index.html  main.js
src/assets/css/: app.css  calculator.css  calculator.min.css
src/assets/js/: app.js  app.min.js  jquery.min.js
src/helpers/: window.js
src/stylesheets/: main.css
test/: spec.js
